# internet-downloader

./: .gitignore  LICENSE  README.md  SKILL.md  SYSTEM_DESIGN.md  run_app.sh
.github/workflows/: build-linux.yml  build-windows.yml  deploy-website.yml
apps/api/: README.md  alembic.ini  pyproject.toml  pytest_out.txt
apps/api/src/dm_api/application/ports/: download_repository.py  event_bus.py  metadata_probe.py  progress_snapshot.py  segment_worker.py  settings_repository.py
apps/api/src/dm_api/application/services/: download_runner.py  progress_service.py  reconcile_service.py
apps/api/src/dm_api/application/use_cases/: add_download.py  get_download.py  start_download.py
apps/api/src/dm_api/domain/entities/: download_queue.py  download_segment.py  download_task.py
apps/api/src/dm_api/domain/events/: domain_events.py
apps/api/src/dm_api/domain/policies/: checksum_policy.py  retry_policy.py  segmentation_policy.py  speed_limit_policy.py
apps/api/src/dm_api/domain/value_objects/: download_status.py  queue_status.py  segment_status.py
apps/api/src/dm_api/infrastructure/events/: in_memory_event_bus.py
apps/api/src/dm_api/infrastructure/http/: http_client.py  httpx_metadata_probe.py  single_segment_worker.py
apps/api/src/dm_api/infrastructure/logging/: setup.py
apps/api/src/dm_api/infrastructure/media/: binaries.py  ytdlp_probe.py  ytdlp_worker.py
apps/api/src/dm_api/infrastructure/persistence/: models.py  sqlite_download_repository.py  sqlite_settings_repository.py
apps/api/src/dm_api/infrastructure/persistence/migrations/: env.py
apps/api/src/dm_api/infrastructure/persistence/migrations/versions/: 0001_initial.py  0002_media_format_id.py  0003_file_missing.py
apps/api/src/dm_api/presentation/: app.py  main.py
apps/api/src/dm_api/presentation/routers/: config.py  downloads.py  health.py  media.py  settings.py  stream.py
apps/api/src/dm_api/presentation/schemas/: download_dto.py  progress_dto.py  settings_dto.py
apps/api/src/dm_api/presentation/websocket/: progress_gateway.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_api_routes.py  test_health.py  test_in_memory_event_bus.py  test_initial_migration.py  test_real_download.py  test_restart_survival.py  test_sqlite_download_repository.py
apps/api/tests/unit/: test_dependency_rule.py
apps/api/tests/unit/application/: test_add_download.py  test_dependency_rule.py  test_download_runner.py  test_get_download.py  test_reconcile_service.py  test_start_download.py
apps/api/tests/unit/domain/: test_domain_events.py  test_entities.py  test_value_objects.py
apps/api/tests/unit/infrastructure/: test_binaries.py  test_httpx_metadata_probe.py  test_logging_setup.py  test_single_segment_worker.py  test_sqlite_settings_repository.py  test_ytdlp_worker_cancel.py
apps/api/tests/unit/policies/: test_checksum_policy.py  test_retry_policy.py  test_segmentation_policy.py  test_speed_limit_policy.py
apps/api/tests/unit/presentation/: test_download_dto.py  test_main.py
apps/browser-extension/: README.md  background.js  content.css  content.js  interceptor.js  manifest.json  popup.html  popup.js
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx  api-port.ts  api.ts  index.css  types.ts  utils.ts
apps/shell/: Cargo.toml  README.md  package.json  tauri.conf.json
apps/shell/capabilities/: default.json
apps/shell/icons/: icon.icns
apps/shell/src/: error.rs  lib.rs  main.rs  notifications.rs  sidecar.rs  tray.rs
apps/website/: index.html
docs/superpowers/plans/: 2026-05-22-phase-1-foundation.md  2026-05-23-phase-2a-persistence-api.md  (+9 more)
(+33 files in other folders)
