[project]
name = "dm-api"
version = "0.1.0"
description = "Download Manager backend — domain layer and persistence"
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "alembic>=1.13",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dm_api"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = false

[[tool.mypy.overrides]]
module = "dm_api.domain.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src/dm_api/domain --cov-fail-under=95 --cov-report=term-missing -p no:launch_testing -p no:launch_ros -p no:ament_flake8 -p no:ament_xmllint -p no:ament_copyright -p no:ament_pep257 -p no:ament_lint"
markers = [
    "integration: tests that hit the filesystem or database",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
